--- a/InitialProject/InitialProject/View/Owner/GuestRatings.xaml
+++ b/InitialProject/InitialProject/View/Owner/GuestRatings.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InitialProject.View.Owner"
         mc:Ignorable="d"
-        Title="GuestRatings" Height="450" Width="800">
+        Title="GuestRatings" Background="Beige" Height="450" Width="800">
     <Grid>
         <Grid Grid.Row="1" Grid.Column="0" Margin="416,43,84,107" Grid.RowSpan="2">
             <Grid.RowDefinitions>
