--- a/InitialProject/InitialProject/View/Tourist/Requests.xaml
+++ b/InitialProject/InitialProject/View/Tourist/Requests.xaml
@@ -122,6 +122,35 @@
             Margin="830,654,0,0" 
             VerticalAlignment="Top"/>
         <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="530,582,94,103"/>
+        <Label Content="Overall" HorizontalAlignment="Left" Margin="116,279,0,0" VerticalAlignment="Top"/>
+        <Label Content="2023" HorizontalAlignment="Left" Margin="116,305,0,0" VerticalAlignment="Top"/>
+        <Label Content="2022" HorizontalAlignment="Left" Margin="116,331,0,0" VerticalAlignment="Top"/>
+        <Label Content="2021" HorizontalAlignment="Left" Margin="116,357,0,0" VerticalAlignment="Top"/>
+        <Label Content="Accepted Requests %" HorizontalAlignment="Left" Margin="173,261,0,0" VerticalAlignment="Top"/>
+        <Label Content="Denied Requests %" HorizontalAlignment="Left" Margin="301,261,0,0" VerticalAlignment="Top"/>
+        <Label Content="Avg Tourist Number" HorizontalAlignment="Left" Margin="418,261,0,0" VerticalAlignment="Top"/>
+        <Label Content="By Language" HorizontalAlignment="Left" Margin="653,230,0,0" VerticalAlignment="Top"/>
+        <Label Content="By Location" HorizontalAlignment="Left" Margin="844,230,0,0" VerticalAlignment="Top"/>
+        <Label Content="Serbian" HorizontalAlignment="Left" Margin="653,261,0,0" VerticalAlignment="Top"/>
+        <Label Content="English" HorizontalAlignment="Left" Margin="653,287,0,0" VerticalAlignment="Top"/>
+        <Label Content="Novi Sad" HorizontalAlignment="Left" Margin="765,261,0,0" VerticalAlignment="Top"/>
+        <Label Content="Kopaonik" HorizontalAlignment="Left" Margin="765,282,0,0" VerticalAlignment="Top"/>
+        <Label Content="{Binding OAR}" HorizontalAlignment="Left" Height="27" Margin="205,286,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding ODR}" HorizontalAlignment="Left" Height="27" Margin="334,287,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AR23}" HorizontalAlignment="Left" Height="27" Margin="205,313,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding DR23}" HorizontalAlignment="Left" Height="27" Margin="334,313,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AR22}" HorizontalAlignment="Left" Height="27" Margin="205,340,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding DR22}" HorizontalAlignment="Left" Height="27" Margin="334,340,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AR21}" HorizontalAlignment="Left" Height="27" Margin="205,0,0,0" VerticalAlignment="Center" Width="45"/>
+        <Label Content="{Binding DR21}" HorizontalAlignment="Left" Height="27" Margin="334,0,0,0" VerticalAlignment="Center" Width="45"/>
+        <Label Content="{Binding OAVG}" HorizontalAlignment="Left" Height="28" Margin="458,288,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AVG23}" HorizontalAlignment="Left" Height="26" Margin="453,316,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AVG22}" HorizontalAlignment="Left" Height="27" Margin="453,340,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AVG21}" HorizontalAlignment="Left" Height="27" Margin="458,365,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding Serbian}" HorizontalAlignment="Left" Height="27" Margin="706,260,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding English}" HorizontalAlignment="Left" Height="27" Margin="708,292,0,0" VerticalAlignment="Top" Width="44"/>
+        <Label Content="{Binding NS}" HorizontalAlignment="Left" Height="27" Margin="858,260,0,0" VerticalAlignment="Top" Width="44"/>
+        <Label Content="{Binding KOP}" HorizontalAlignment="Left" Height="27" Margin="858,289,0,0" VerticalAlignment="Top" Width="45"/>
 
     </Grid>
 </Window>
