--- a/InitialProject/InitialProject/View/Tourist/Requests.xaml
+++ b/InitialProject/InitialProject/View/Tourist/Requests.xaml
@@ -106,7 +106,14 @@
             HorizontalAlignment="Left" 
             Margin="530,539,0,0" 
             VerticalAlignment="Top"/>
-        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="95,582,529,103"/>
+        <DataGrid ItemsSource="{Binding TourRequests}" Margin="95,575,529,80" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Location" Binding="{Binding LocationId}" Width="50" CanUserResize="True"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="150"/>
+                <DataGridTextColumn Header="Language" Binding="{Binding Language}" Width="80"/>
+                <DataGridTextColumn Header="Status" Binding="{Binding Status}"/>
+            </DataGrid.Columns>
+        </DataGrid>
         <Button 
             Content="See More" 
             Height="31" 
@@ -141,12 +148,12 @@
         <Label Content="{Binding DR23}" HorizontalAlignment="Left" Height="27" Margin="334,313,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="{Binding AR22}" HorizontalAlignment="Left" Height="27" Margin="205,340,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="{Binding DR22}" HorizontalAlignment="Left" Height="27" Margin="334,340,0,0" VerticalAlignment="Top" Width="45"/>
-        <Label Content="{Binding AR21}" HorizontalAlignment="Left" Height="27" Margin="205,0,0,0" VerticalAlignment="Center" Width="45"/>
-        <Label Content="{Binding DR21}" HorizontalAlignment="Left" Height="27" Margin="334,0,0,0" VerticalAlignment="Center" Width="45"/>
-        <Label Content="{Binding OAVG}" HorizontalAlignment="Left" Height="28" Margin="458,288,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AR21}" HorizontalAlignment="Left" Height="27" Margin="205,20,0,0" VerticalAlignment="Center" Width="45"/>
+        <Label Content="{Binding DR21}" HorizontalAlignment="Left" Height="27" Margin="334,20,0,0" VerticalAlignment="Center" Width="45"/>
+        <Label Content="{Binding OAVG}" HorizontalAlignment="Left" Height="28" Margin="453,288,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="{Binding AVG23}" HorizontalAlignment="Left" Height="26" Margin="453,316,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="{Binding AVG22}" HorizontalAlignment="Left" Height="27" Margin="453,340,0,0" VerticalAlignment="Top" Width="45"/>
-        <Label Content="{Binding AVG21}" HorizontalAlignment="Left" Height="27" Margin="458,365,0,0" VerticalAlignment="Top" Width="45"/>
+        <Label Content="{Binding AVG21}" HorizontalAlignment="Left" Height="27" Margin="453,365,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="{Binding Serbian}" HorizontalAlignment="Left" Height="27" Margin="706,260,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="{Binding English}" HorizontalAlignment="Left" Height="27" Margin="708,292,0,0" VerticalAlignment="Top" Width="44"/>
         <Label Content="{Binding NS}" HorizontalAlignment="Left" Height="27" Margin="858,260,0,0" VerticalAlignment="Top" Width="44"/>
