--- a/InitialProject/InitialProject/View/GuestFolder/GuestView.xaml
+++ b/InitialProject/InitialProject/View/GuestFolder/GuestView.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="Welcome window" Height="470" Width="810" Background="Lavender">
     <Grid>
-        <Label Content="WELCOME BACK!" HorizontalAlignment="Left" Margin="37,33,0,0" VerticalAlignment="Top" Height="54" Width="343" FontSize="40" FontFamily="Bahnschrift Light"/>
-        <Label Content="Where would you like to go?" HorizontalAlignment="Left" Margin="37,133,0,0" VerticalAlignment="Top" Height="46" Width="343" FontSize="25" FontFamily="Bahnschrift Light" />
-        <Button HorizontalAlignment="Left" Margin="37,307,0,0" VerticalAlignment="Top" Height="73" Width="343" Click="Button_Click_1" Content="Surprise me" FontSize="25" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
-        <Button Content="Search" HorizontalAlignment="Left" Margin="37,202,0,0" VerticalAlignment="Top" Height="76" Width="343" FontSize="25" Click="Button_Click_2" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
-        <Button Content="Profile" HorizontalAlignment="Left" Margin="420,307,0,0" VerticalAlignment="Top" Height="73" Width="345" FontSize="25" Click="Button_Click_3" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
-        <Button Content="Reservations" HorizontalAlignment="Left" VerticalAlignment="Top" Height="76" Width="343" Click="Button_Click" Margin="422,202,0,0" FontSize="25" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
-        <Button x:Name="NotificationButton" Content="2" Margin="405,15,334,367" FontSize="25" Click="Button_Click_1" Background="Lavender">
+        <Label Content="WELCOME BACK!" HorizontalAlignment="Left" Margin="37,24,0,0" VerticalAlignment="Top" Height="54" Width="343" FontSize="40" FontFamily="Bahnschrift Light"/>
+        <Label Content="Where would you like to go?" HorizontalAlignment="Left" Margin="37,83,0,0" VerticalAlignment="Top" Height="46" Width="343" FontSize="25" FontFamily="Bahnschrift Light" />
+        <Button x:Name="SurpriseMeButton" HorizontalAlignment="Left" Margin="40,348,0,0" VerticalAlignment="Top" Height="73" Width="343" Content="Surprise me" FontSize="25" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
+        <Button Content="Search" HorizontalAlignment="Left" Margin="40,250,0,0" VerticalAlignment="Top" Height="73" Width="343" FontSize="25" Click="Button_Click_2" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
+        <Button Content="Forums" HorizontalAlignment="Left" Margin="423,348,0,0" VerticalAlignment="Top" Height="73" Width="345" FontSize="25" Click="Button_Click_4" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
+        <Button Content="Reservations" HorizontalAlignment="Left" VerticalAlignment="Top" Height="73" Width="343" Click="Button_Click" Margin="425,250,0,0" FontSize="25" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
+        <Button x:Name="NotificationButton" Content="2" Margin="440,24,315,376" FontSize="25" Click="NotificationButton_Click" Background="Lavender">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Grid>
@@ -41,9 +41,10 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Image HorizontalAlignment="Left" Height="145" Margin="577,33,0,0" VerticalAlignment="Top" Width="165" Source="/Resources/Images/logo.jpg"/>
+        <Image HorizontalAlignment="Left" Height="162" Margin="563,28,0,0" VerticalAlignment="Top" Width="200" Source="/Resources/Images/logo.jpg"/>
         <Label Content="B - GO BACK ON PREVIOUS PAGE
-" HorizontalAlignment="Left" Margin="529,418,0,10" FontSize="15" FontFamily="Bahnschrift Light"/>
+" HorizontalAlignment="Left" Margin="563,428,0,0" FontSize="15" FontFamily="Bahnschrift Light"/>
+        <Button Content="Profile" HorizontalAlignment="Left" Margin="40,154,0,0" VerticalAlignment="Top" Height="73" Width="345" FontSize="25" Click="Button_Click_3" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
 
     </Grid>
 </Window>
